--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -26,7 +26,8 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: linear-gradient(#e66465, #9198e5) ;
+  /*background-color: linear-gradient(#e66465, #9198e5) ;*/
+  background-image: url(/form\ img2.webp);
 }
 
 /* global css */
@@ -53,7 +54,7 @@ li {
 .btn {
   display: inline-block;
   border-radius: 8px;
-  padding: 0.8em 1.5rem;
+  padding: 0.8em 0.75rem;
   margin-top: 0.5rem;
   text-transform: capitalize;
   font-size: 1.25rem;
@@ -76,7 +77,7 @@ li {
     max-width: 30rem;
     width: 24rem;
     margin:0 auto ;
-    padding: 0.5rem 1rem 3rem 1rem;
+    padding: 0.5rem 1rem 2rem 1rem;
     background: linear-gradient(#e66465, #9198e5); ;
     color: var(--clr-white);
     border-radius: 10px ;
@@ -124,11 +125,11 @@ li {
     border-color: green;
 }
 
-small{
+.form-control small{
     color: red;
-    font-size: 1.1rem;
+    font-size: 1.0rem;
     margin-bottom: 0.1rem;
-    visibility: hidden;
+    visibility:hidden ;
     
 }
 .form-control.error small{
@@ -151,7 +152,7 @@ small{
 .btn-block{
     display: block;
     width: 100%;
-    margin: 1.5rem auto;
+    margin: .5rem auto;
 }
 
 @media screen and (min-width:768px){
